--- a/VS code.html
+++ b/VS code.html
@@ -8,9 +8,9 @@
 <body>
     <h1><h1> Pratigya Mahato</h1>
     <p>This is paragraph tag</p>
-    <h2> My to 3 hobby projects</h2>git add
+    <h2> My to 3 hobby projects</h2>
     <ul>
-        <li>Painting</li>
+        <li>Drawing</li>
         <li>Listening songs</li>
         <li> Eating</li>
     </ul>
